# nebula-deprecated

./: README.md  mkdocs.yml
.github/workflows/: build-and-test-differential.yaml  build-and-test.yml  build_and_test.yml  codeql-analysis.yml  documentation.yml  spell_check_pr.yml
docs/: index.md
messages/hesai_msgs/: CMakeLists.txt  package.xml
messages/pandar_msgs/: package.xml
nebula_common/: CMakeLists.txt
nebula_common/include/nebula_common/: nebula_common.hpp  point_types.hpp
nebula_common/src/velodyne/: velodyne_calibration_decoder.cpp
nebula_decoders/: CMakeLists.txt  package.xml
nebula_decoders/src/nebula_decoders_hesai/: hesai_decoder.cpp
nebula_decoders/src/nebula_decoders_velodyne/: velodyne_driver.cpp
nebula_drivers/: CMakeLists.txt  package.xml
nebula_drivers/calibration/hesai/: PandarQT128.csv
nebula_drivers/config/: PandarXT32M.yaml  VLP32.yaml
nebula_drivers/config/hesai/: PandarXT32.yaml
nebula_drivers/include/common/: nebula_common.hpp  nebula_driver_base.hpp  nebula_driver_ros_wrapper_base.hpp  nebula_hw_interface_base.hpp  nebula_hw_interface_ros_wrapper_base.hpp  nebula_status.hpp  point_types.hpp
nebula_drivers/include/hesai/: hesai_common.hpp  hesai_driver.hpp  hesai_driver_ros_wrapper.hpp  hesai_hw_interface.hpp  hesai_hw_interface_ros_wrapper.hpp
nebula_drivers/include/hesai/decoders/: hesai_scan_decoder.hpp  pandar_128_e4x.hpp  pandar_128_e4x_decoder.hpp  pandar_40_decoder.hpp  pandar_64_decoder.hpp  pandar_at_decoder.hpp  pandar_qt_128.hpp  pandar_qt_128_decoder.hpp  pandar_qt_64.hpp  pandar_qt_64_decoder.hpp  pandar_qt_decoder.hpp  pandar_xt_decoder.hpp  pandar_xtm_decoder.hpp
nebula_drivers/include/velodyne/: velodyne_common.hpp  velodyne_driver.hpp  velodyne_hw_interface.hpp
nebula_drivers/include/velodyne/decoders/: velodyne_scan_decoder.hpp  vlp16_decoder.hpp  vlp32_decoder.hpp  vls128_decoder.hpp
nebula_drivers/launch/: hesai_decorder_test.xml  hesai_launch_all_hw.xml  nebula_launch.py  velodyne_launch_all_hw.xml
nebula_drivers/src/: CMakeLists.txt
nebula_drivers/src/hesai/: CMakeLists.txt  hesai_driver.cpp  hesai_driver_ros_wrapper.cpp  hesai_hw_interface.cpp  hesai_hw_interface_ros_wrapper.cpp
nebula_drivers/src/hesai/decoders/: pandar_128_e4x_decoder.cpp  pandar_40_decoder.cpp  pandar_64_decoder.cpp  pandar_at_decoder.cpp  pandar_qt_128_decoder.cpp  pandar_qt_64_decoder.cpp  pandar_qt_decoder.cpp  pandar_xt_decoder.cpp  pandar_xtm_decoder.cpp
nebula_drivers/src/velodyne/: CMakeLists.txt  velodyne_driver.cpp  velodyne_driver_ros_wrapper.cpp  velodyne_hw_interface_ros_wrapper.cpp  velodyne_hw_monitor_ros_wrapper.cpp
nebula_drivers/src/velodyne/decoders/: vlp16_decoder.cpp  vlp32_decoder.cpp  vls128_decoder.cpp
nebula_drivers/test/: CMakeLists.txt  hesai_ros_decoder_test_40p.cpp  hesai_ros_decoder_test_64.cpp  hesai_ros_decoder_test_at128.cpp  hesai_ros_decoder_test_at128.hpp  hesai_ros_decoder_test_main_at128.cpp  hesai_ros_decoder_test_main_xt32m.cpp  hesai_ros_decoder_test_qt64.cpp  hesai_ros_decoder_test_xt32.cpp  hesai_ros_decoder_test_xt32m.cpp  hesai_ros_decoder_test_xt32m.hpp  hesai_ros_decorder_test.cpp  hesai_ros_decorder_test.hpp  hesai_ros_decorder_test.yaml  hesai_ros_decorder_test_launch.py  hesai_ros_decorder_test_main.cpp  velodyne_ros_decoder_test_vlp16.cpp  velodyne_ros_decoder_test_vls128.cpp
nebula_drivers/test/hesai/: CMakeLists.txt  hesai_ros_decoder_test_40p.cpp  hesai_ros_decoder_test_64.cpp  hesai_ros_decoder_test_xt32m.cpp
nebula_drivers/test/velodyne/: CMakeLists.txt  velodyne_ros_decoder_test_vls128.cpp
nebula_examples/: CMakeLists.txt
nebula_examples/include/hesai/: hesai_ros_offline_extract_bag_pcd.hpp  hesai_ros_offline_extract_pcd.hpp
nebula_examples/include/velodyne/: velodyne_ros_offline_extract_bag_pcd.hpp
nebula_examples/launch/: hesai_offline_bag_pcd.xml  velodyne_offline_bag_pcd.xml
nebula_examples/src/hesai/: hesai_ros_offline_extract_bag_pcd.cpp  hesai_ros_offline_extract_pcd.cpp
nebula_examples/src/velodyne/: velodyne_ros_offline_extract_bag_pcd.cpp
nebula_hw_interfaces/src/nebula_hesai_hw_interfaces/: hesai_hw_interface.cpp
nebula_hw_interfaces/src/nebula_velodyne_hw_interfaces/: velodyne_hw_interface.cpp
nebula_offline_sample/: CMakeLists.txt  package.xml
nebula_offline_sample/include/hesai/: hesai_ros_offline_extract_bag_pcd.hpp  hesai_ros_offline_extract_pcd.hpp
nebula_offline_sample/include/velodyne/: velodyne_ros_offline_extract_bag_pcd.hpp  velodyne_ros_offline_extract_pcd.hpp
nebula_offline_sample/launch/: hesai_offline_bag_pcd.xml
nebula_offline_sample/src/hesai/: hesai_ros_offline_extract_bag_pcd.cpp  hesai_ros_offline_extract_pcd.cpp
nebula_offline_sample/src/velodyne/: velodyne_driver_ros_wrapper.cpp  (+2 more)
nebula_ros/: CMakeLists.txt  package.xml
nebula_ros/config/hesai/: PandarAT128.yaml  PandarQT128.yaml
nebula_ros/include/nebula_ros/common/: nebula_driver_ros_wrapper_base.hpp
nebula_ros/include/nebula_ros/hesai/: hesai_decoder_ros_wrapper.hpp  hesai_hw_interface_ros_wrapper.hpp  hesai_hw_monitor_ros_wrapper.hpp
nebula_ros/include/nebula_ros/velodyne/: velodyne_decoder_ros_wrapper.hpp  velodyne_hw_interface_ros_wrapper.hpp  velodyne_hw_monitor_ros_wrapper.hpp
nebula_ros/launch/: hesai_launch_all_hw.xml  nebula_launch.py  velodyne_launch_all_hw.xml
nebula_ros/src/hesai/: CMakeLists.txt  hesai_decoder_ros_wrapper.cpp  hesai_hw_interface_ros_wrapper.cpp  hesai_hw_monitor_ros_wrapper.cpp
nebula_ros/src/velodyne/: CMakeLists.txt  velodyne_decoder_ros_wrapper.cpp  velodyne_hw_interface_ros_wrapper.cpp
nebula_tests/: CMakeLists.txt
nebula_tests/hesai/: hesai_ros_decoder_test_40p.hpp  hesai_ros_decoder_test_64.hpp  hesai_ros_decoder_test_at128.cpp  hesai_ros_decoder_test_at128.hpp  hesai_ros_decoder_test_qt64.cpp  hesai_ros_decoder_test_qt64.hpp  hesai_ros_decoder_test_xt32.cpp  hesai_ros_decoder_test_xt32.hpp  hesai_ros_decoder_test_xt32m.hpp
nebula_tests/velodyne/: velodyne_ros_decoder_test_vlp16.cpp  velodyne_ros_decoder_test_vlp16.hpp  velodyne_ros_decoder_test_vls128.hpp
(+52 files in other folders)
